--- a/rabbitmq.conf
+++ b/rabbitmq.conf
@@ -1,9 +1,24 @@
+## This example configuration file demonstrates various settings
+## available via rabbitmq.conf. It primarily focuses core broker settings
+## but some tier 1 plugin settings are also covered.
+##
+## This file is AN EXAMPLE. It is NOT MEANT TO BE USED IN PRODUCTION. Instead of
+## copying the entire (large!) file, create or generate a new rabbitmq.conf for the target system
+## and populate it with the necessary settings.
+##
+## See https://rabbitmq.com/configure.html to learn about how to configure RabbitMQ,
+## the ini-style format used by rabbitmq.conf, how it is different from `advanced.config`,
+## how to verify effective configuration, and so on.
+##
+## See https://rabbitmq.com/documentation.html for the rest of RabbitMQ documentation.
+##
+## In case you have questions, please use RabbitMQ community Slack and the rabbitmq-users Google group
+## instead of GitHub issues.
+
 # ======================================
-# RabbitMQ broker section
+# Core broker section
 # ======================================
 
-## Related doc guide: https://rabbitmq.com/configure.html. See
-## https://rabbitmq.com/documentation.html for documentation ToC.
 
 ## Networking
 ## ====================
@@ -34,12 +49,24 @@
 ##
 # listeners.ssl.default = 5671
 
+## It is possible to disable regular TCP (non-TLS) listeners. Clients
+## not configured to use TLS and the correct TLS-enabled port won't be able
+## to connect to this node.
+# listeners.tcp = none
+
 ## Number of Erlang processes that will accept connections for the TCP
 ## and TLS listeners.
 ##
 # num_acceptors.tcp = 10
 # num_acceptors.ssl = 10
 
+## Socket writer will force GC every so many bytes transferred.
+## Default is 1 GiB (`1000000000`). Set to 'off' to disable.
+##
+# socket_writer.gc_threshold = 1000000000
+#
+## To disable:
+# socket_writer.gc_threshold = off
 
 ## Maximum amount of time allowed for the AMQP 0-9-1 and AMQP 1.0 handshake
 ## (performed after socket connection and TLS handshake) to complete, in milliseconds.
@@ -61,7 +88,7 @@
 
 ## The default "guest" user is only permitted to access the server
 ## via a loopback interface (e.g. localhost).
-# {loopback_users, ["<<guest>>"]},
+## {loopback_users, [<<"guest">>]},
 ##
 # loopback_users.guest = true
 
@@ -73,6 +100,8 @@
 ##
 ## Related doc guide: https://rabbitmq.com/ssl.html.
 ##
+# listeners.ssl.1                  = 5671
+# 
 # ssl_options.verify               = verify_peer
 # ssl_options.fail_if_no_peer_cert = false
 # ssl_options.cacertfile           = /path/to/cacert.pem
@@ -81,7 +110,41 @@
 #
 # ssl_options.honor_cipher_order   = true
 # ssl_options.honor_ecc_order      = true
+#
+## These are highly recommended for TLSv1.2 but cannot be used
+## with TLSv1.3. If TLSv1.3 is enabled, these lines MUST be removed.
+# ssl_options.client_renegotiation = false
+# ssl_options.secure_renegotiate   = true
+#
+## Limits what TLS versions the server enables for client TLS
+## connections. See https://www.rabbitmq.com/ssl.html#tls-versions for details.
+##
+## Cutting edge TLS version which requires recent client runtime
+## versions and has no cipher suite in common with earlier TLS versions.
+# ssl_options.versions.1 = tlsv1.3
+## Enables TLSv1.2 for best compatibility
+# ssl_options.versions.2 = tlsv1.2
+## Older TLS versions have known vulnerabilities and are being phased out
+## from wide use.
 
+## Limits what cipher suites the server will use for client TLS
+## connections. Narrowing this down can prevent some clients
+## from connecting.
+## If TLSv1.3 is enabled and cipher suites are overridden, TLSv1.3-specific
+## cipher suites must also be explicitly enabled.
+## See https://www.rabbitmq.com/ssl.html#cipher-suites and https://wiki.openssl.org/index.php/TLS1.3#Ciphersuites
+## for details.
+#
+## The example below uses TLSv1.3 cipher suites only
+#
+# ssl_options.ciphers.1  = TLS_AES_256_GCM_SHA384
+# ssl_options.ciphers.2  = TLS_AES_128_GCM_SHA256
+# ssl_options.ciphers.3  = TLS_CHACHA20_POLY1305_SHA256
+# ssl_options.ciphers.4  = TLS_AES_128_CCM_SHA256
+# ssl_options.ciphers.5  = TLS_AES_128_CCM_8_SHA256
+#
+## The example below uses TLSv1.2 cipher suites only
+#
 # ssl_options.ciphers.1  = ECDHE-ECDSA-AES256-GCM-SHA384
 # ssl_options.ciphers.2  = ECDHE-RSA-AES256-GCM-SHA384
 # ssl_options.ciphers.3  = ECDHE-ECDSA-AES256-SHA384
@@ -118,6 +181,8 @@
 # ssl_options.ciphers.34 = DHE-DSS-AES128-SHA
 # ssl_options.ciphers.35 = ECDH-ECDSA-AES128-SHA
 # ssl_options.ciphers.36 = ECDH-RSA-AES128-SHA
+
+# ssl_options.bypass_pem_cache = true
 
 ## Select an authentication/authorisation backend to use.
 ##
@@ -200,6 +265,10 @@
 # ssl_handshake_timeout = 5000
 
 
+## Cluster name
+##
+# cluster_name = dev3.eng.megacorp.local
+
 ## Password hashing implementation. Will only affect newly
 ## created users. To recalculate hash for an existing user
 ## it's necessary to update her password.
@@ -247,7 +316,14 @@
 ## =====================================================
 ##
 
-## Set the default AMQP 0-9-1 heartbeat interval (in seconds).
+## Set the server AMQP 0-9-1 heartbeat timeout in seconds.
+## RabbitMQ nodes will send heartbeat frames at roughly
+## the (timeout / 2) interval. Two missed heartbeats from
+## a client will close its connection.
+##
+## Values lower than 6 seconds are very likely to produce
+## false positives and are not recommended.
+##
 ## Related doc guides:
 ##
 ## * https://rabbitmq.com/heartbeats.html
@@ -305,7 +381,7 @@
 ## Or you can set absolute value using memory units (with RabbitMQ 3.6.0+).
 ## Absolute watermark will be ignored if relative is defined!
 ##
-# vm_memory_high_watermark.absolute = 2GB
+vm_memory_high_watermark.absolute = 768M
 ##
 ## Supported unit symbols:
 ##
@@ -373,6 +449,10 @@
 ##
 # cluster_partition_handling = ignore
 
+## Pauses all nodes on the minority side of a partition. The cluster
+## MUST have an odd number of nodes (3, 5, etc)
+# cluster_partition_handling = pause_minority
+
 ## pause_if_all_down strategy require additional configuration
 # cluster_partition_handling = pause_if_all_down
 
@@ -425,17 +505,28 @@
 ## =====================
 ##
 
-## Set (internal) statistics collection granularity.
-##
-## Can be none, coarse or fine
-# collect_statistics = none
-
-# collect_statistics = coarse
-
 ## Statistics collection interval (in milliseconds). Increasing
 ## this will reduce the load on management database.
 ##
 # collect_statistics_interval = 5000
+
+## Fine vs. coarse statistics
+#
+# This value is no longer meant to be configured directly.
+#
+# See https://www.rabbitmq.com/management.html#fine-stats.
+
+##
+## Ra Settings
+## =====================
+##
+## NB: changing these on a node with existing data directory
+##     can lead to DATA LOSS.
+##
+# raft.segment_max_entries = 65536
+# raft.wal_max_size_bytes = 1048576
+# raft.wal_max_batch_size = 4096
+# raft.snapshot_chunk_size = 1000000
 
 ##
 ## Misc/Advanced Options
@@ -443,10 +534,6 @@
 ##
 ## NB: Change these only if you understand what you are doing!
 ##
-
-## Explicitly enable/disable hipe compilation.
-##
-# hipe_compile = false
 
 ## Timeout used when waiting for Mnesia tables in a cluster to
 ## become available.
@@ -495,6 +582,24 @@
 ## See the plugins documentation for more information.
 ##
 # proxy_protocol = false
+
+## Overriden product name and version.
+## They are set to "RabbitMQ" and the release version by default.
+# product.name = RabbitMQ
+# product.version = 1.2.3
+
+## "Message of the day" file.
+## Its content is used to expand the logged and printed banners.
+## Default to /etc/rabbitmq/motd on Unix, %APPDATA%\RabbitMQ\motd.txt
+## on Windows.
+# motd_file = /etc/rabbitmq/motd
+
+## Consumer timeout
+## If a message delivered to a consumer has not been acknowledge before this timer
+## triggers the channel will be force closed by the broker. This ensure that
+## faultly consumers that never ack will not hold on to messages indefinitely.
+##
+# consumer_timeout = 900000
 
 ## ----------------------------------------------------------------------------
 ## Advanced Erlang Networking/Clustering Options.
@@ -560,12 +665,14 @@
 ## More TLS options
 # management.ssl.honor_cipher_order   = true
 # management.ssl.honor_ecc_order      = true
+
+## These are highly recommended for TLSv1.2 but cannot be used
+## with TLSv1.3. If TLSv1.3 is enabled, these lines MUST be removed.
 # management.ssl.client_renegotiation = false
 # management.ssl.secure_renegotiate   = true
 
 ## Supported TLS versions
 # management.ssl.versions.1 = tlsv1.2
-# management.ssl.versions.2 = tlsv1.1
 
 ## Cipher suites the server is allowed to use
 # management.ssl.ciphers.1 = ECDHE-ECDSA-AES256-GCM-SHA384
@@ -578,7 +685,8 @@
 # management.ssl.ciphers.8 = ECDH-RSA-AES256-SHA384
 # management.ssl.ciphers.9 = DHE-RSA-AES256-GCM-SHA384
 
-
+## URL path prefix for HTTP API and management UI
+# management.path_prefix = /a-prefix
 
 ## One of 'basic', 'detailed' or 'none'. See
 ## https://rabbitmq.com/management.html#fine-stats for more details.
@@ -604,7 +712,7 @@
 ## Related doc guide: https://rabbitmq.com/shovel.html
 ## ----------------------------------------------------------------------------
 
-## Shovel plugin config example is defined in additional.config file
+## See advanced.config.example for a Shovel plugin example
 
 
 ## ----------------------------------------------------------------------------
@@ -821,7 +929,7 @@
 ## Log level for file logging
 ##
 # log.file.level = info
-log.default.level = debug
+
 ## File rotation config. No rotation by default.
 ## DO NOT SET rotation date to ''. Leave the value unset if "" is the desired value
 # log.file.rotation.date = $D0
@@ -829,7 +937,7 @@ log.default.level = debug
 
 ## Logging to console (can be true or false)
 ##
-log.console = true
+# log.console = false
 
 ## Log level for console logging
 ##
@@ -951,8 +1059,8 @@ log.console = true
 ##
 ## Related doc guide: https://rabbitmq.com/ldap.html#authorisation.
 
-## Following configuration should be defined in additional.config file
-## DO NOT UNCOMMENT THIS LINES!
+## Following configuration should be defined in advanced.config file
+## DO NOT UNCOMMENT THESE LINES!
 
 ## Set the query to use when determining vhost access
 ##
